# HWcontrol2.0

./: .gitignore  CMakeLists.txt  README.md
ai_core/: CMakeLists.txt
ai_core/include/: bsod_shield.h  engine.h  monitor.h
ai_core/src/: bsod_shield.cpp  engine.cpp  main.cpp  monitor.cpp
bridge_service/src/: main.go
gui_dashboard/lib/: main.dart
